// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`install installs a specific version 1`] = `
[
  {
    "address_line1": "33 SIR FREDERICK CLARKE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "OX29 7EG",
    "town": "WITNEY",
    "uprn": "10096719965",
  },
  {
    "address_line1": "FLAT 3",
    "address_line2": "50 NEWBERY ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "DA8 2BY",
    "town": "ERITH",
    "uprn": "10096984676",
  },
  {
    "address_line1": "FLAT",
    "address_line2": "27-28 PEMBERTON STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "B18 6NY",
    "town": "BIRMINGHAM",
    "uprn": "10097262530",
  },
  {
    "address_line1": "6 HIGH STREET",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "S",
    "postcode": "EH22 1HR",
    "town": "DALKEITH",
    "uprn": "120021519",
  },
  {
    "address_line1": "UNIT C015",
    "address_line2": "TRIDENT BUSINESS CENTRE",
    "address_line3": "89 BICKERSTETH ROAD",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "SW17 9SH",
    "town": "LONDON",
    "uprn": "121036452",
  },
  {
    "address_line1": "34 GRAMPIAN AVENUE",
    "address_line2": "BALLYHACKAMORE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "U",
    "country_code": "N",
    "postcode": "BT4 3AB",
    "town": "BELFAST",
    "uprn": "185013429",
  },
  {
    "address_line1": "45 BALFOUR AVENUE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "C",
    "country_code": "N",
    "postcode": "BT38 9RE",
    "town": "WHITEHEAD",
    "uprn": "185395909",
  },
  {
    "address_line1": "MOSSLEY PRIMARY SCHOOL",
    "address_line2": "2 HAZELBURN ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CE",
    "country_code": "N",
    "postcode": "BT36 5NA",
    "town": "NEWTOWNABBEY",
    "uprn": "187378732",
  },
  {
    "address_line1": "27A CARRICKBROAD ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "R",
    "country_code": "N",
    "postcode": "BT35 8TG",
    "town": "NEWRY",
    "uprn": "187531340",
  },
  {
    "address_line1": "3 ELM ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "N",
    "postcode": "BT82 0JE",
    "town": "DUNNAMANAGH",
    "uprn": "187849005",
  },
  {
    "address_line1": "FLAT 126 ROOM C",
    "address_line2": "NORTHFIELD",
    "address_line3": "NORTHFIELD LANE",
    "address_line4": "UNIVERSITY OF SUSSEX",
    "address_type": "Geographic",
    "classification_code": "RI03",
    "country_code": "E",
    "postcode": "BN1 9BJ",
    "town": "BRIGHTON",
    "uprn": "22252469",
  },
  {
    "address_line1": "GROUND FLOOR FLAT",
    "address_line2": "238 WELLS ROAD",
    "address_line3": "KNOWLE",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "BS4 2PJ",
    "town": "BRISTOL",
    "uprn": "266119",
  },
  {
    "address_line1": "ORCHARD CHASE",
    "address_line2": "HEALE LANE",
    "address_line3": "CURRY RIVEL",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "E",
    "postcode": "TA10 0AF",
    "town": "LANGPORT",
    "uprn": "30095445",
  },
  {
    "address_line1": "FLAT 7",
    "address_line2": "180 HAMMERSMITH GROVE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7HF",
    "town": "LONDON",
    "uprn": "34097020",
  },
  {
    "address_line1": "MAISONETTE FIRST AND SECOND FLOORS",
    "address_line2": "7 SAMUEL'S CLOSE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7BX",
    "town": "LONDON",
    "uprn": "34112185",
  },
  {
    "address_line1": "L AND M AUTOS GROUND FLOOR",
    "address_line2": "1 GROSVENOR ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "L34 6HY",
    "town": "PRESCOT",
    "uprn": "40075876",
  },
  {
    "address_line1": "ROOM 415",
    "address_line2": "GOLDSMITHS HOUSE",
    "address_line3": "PARK VILLAGE EAST",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "NW1 3SX",
    "town": "LONDON",
    "uprn": "5134274",
  },
  {
    "address_line1": "UNIT 409",
    "address_line2": "4 SCHWARTZ WHARF",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "E9 5AA",
    "town": "LONDON",
    "uprn": "6710883",
  },
  {
    "address_line1": "ROOM A803C",
    "address_line2": "WHITE ROSE VIEW",
    "address_line3": "16 MERRION WAY",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "LS2 8PD",
    "town": "LEEDS",
    "uprn": "72779096",
  },
]
`;

exports[`install installs the latest version 1`] = `
[
  {
    "address_line1": "19 NIGHTINGALE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "E",
    "postcode": "HU10 7GY",
    "town": "KIRK ELLA",
    "uprn": "10095589421",
  },
  {
    "address_line1": "33 SIR FREDERICK CLARKE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "OX29 7EG",
    "town": "WITNEY",
    "uprn": "10096719965",
  },
  {
    "address_line1": "FLAT 3",
    "address_line2": "50 NEWBERY ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "DA8 2BY",
    "town": "ERITH",
    "uprn": "10096984676",
  },
  {
    "address_line1": "FLAT",
    "address_line2": "27-28 PEMBERTON STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "B18 6NY",
    "town": "BIRMINGHAM",
    "uprn": "10097262530",
  },
  {
    "address_line1": "64 LONG DITCH FURLONG",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD03",
    "country_code": "E",
    "postcode": "HP17 8ZP",
    "town": "HADDENHAM",
    "uprn": "10097278421",
  },
  {
    "address_line1": "6 HIGH STREET",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "S",
    "postcode": "EH22 1HR",
    "town": "DALKEITH",
    "uprn": "120021519",
  },
  {
    "address_line1": "UNIT C015",
    "address_line2": "TRIDENT BUSINESS CENTRE",
    "address_line3": "89 BICKERSTETH ROAD",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "SW17 9SH",
    "town": "LONDON",
    "uprn": "121036452",
  },
  {
    "address_line1": "45 BALFOUR AVENUE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "C",
    "country_code": "N",
    "postcode": "BT38 9RE",
    "town": "WHITEHEAD",
    "uprn": "185395909",
  },
  {
    "address_line1": "MOSSLEY PRIMARY SCHOOL",
    "address_line2": "2 HAZELBURN ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CE",
    "country_code": "N",
    "postcode": "BT36 5NA",
    "town": "NEWTOWNABBEY",
    "uprn": "187378732",
  },
  {
    "address_line1": "27A CARRICKBROAD ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "R",
    "country_code": "N",
    "postcode": "BT35 8TG",
    "town": "NEWRY",
    "uprn": "187531340",
  },
  {
    "address_line1": "APARTMENT 2",
    "address_line2": "38 OLD DISTILLERY GARDENS",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "N",
    "postcode": "BT49 0FR",
    "town": "LIMAVADY",
    "uprn": "187842038",
  },
  {
    "address_line1": "3 ELM ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "N",
    "postcode": "BT82 0JE",
    "town": "DUNNAMANAGH",
    "uprn": "187849005",
  },
  {
    "address_line1": "45 MAPLE GLEN",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "U",
    "country_code": "N",
    "postcode": "BT48 0NE",
    "town": "LONDONDERRY",
    "uprn": "187851753",
  },
  {
    "address_line1": "FLAT 27",
    "address_line2": "WANDLE HOUSE",
    "address_line3": "2 MUSWELL WAY",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "HA1 3NJ",
    "town": "HARROW",
    "uprn": "202247285",
  },
  {
    "address_line1": "FLAT 126 ROOM C",
    "address_line2": "NORTHFIELD",
    "address_line3": "NORTHFIELD LANE",
    "address_line4": "UNIVERSITY OF SUSSEX",
    "address_type": "Geographic",
    "classification_code": "RI03",
    "country_code": "E",
    "postcode": "BN1 9BJ",
    "town": "BRIGHTON",
    "uprn": "22252469",
  },
  {
    "address_line1": "GROUND FLOOR FLAT",
    "address_line2": "238 WELLS ROAD",
    "address_line3": "KNOWLE",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "BS4 2PJ",
    "town": "BRISTOL",
    "uprn": "266119",
  },
  {
    "address_line1": "ORCHARD CHASE",
    "address_line2": "HEALE LANE",
    "address_line3": "CURRY RIVEL",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "E",
    "postcode": "TA10 0AF",
    "town": "LANGPORT",
    "uprn": "30095445",
  },
  {
    "address_line1": "FLAT 7",
    "address_line2": "180 HAMMERSMITH GROVE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7HF",
    "town": "LONDON",
    "uprn": "34097020",
  },
  {
    "address_line1": "MAISONETTE FLOORS 1 AND 2",
    "address_line2": "7 SAMUEL'S CLOSE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7BX",
    "town": "LONDON",
    "uprn": "34112185",
  },
  {
    "address_line1": "L AND M AUTOS GROUND FLOOR",
    "address_line2": "1 GROSVENOR ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "L34 6HY",
    "town": "PRESCOT",
    "uprn": "40075876",
  },
  {
    "address_line1": "ROOM 415",
    "address_line2": "GOLDSMITHS HOUSE",
    "address_line3": "PARK VILLAGE EAST",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "NW1 3SX",
    "town": "LONDON",
    "uprn": "5134274",
  },
  {
    "address_line1": "UNIT 409",
    "address_line2": "4 SCHWARTZ WHARF",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "E9 5AA",
    "town": "LONDON",
    "uprn": "6710883",
  },
  {
    "address_line1": "ROOM A803C",
    "address_line2": "WHITE ROSE VIEW",
    "address_line3": "16 MERRION WAY",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "LS2 8PD",
    "town": "LEEDS",
    "uprn": "72779096",
  },
  {
    "address_line1": "OFFICES G4 AND G5",
    "address_line2": "OAK TREE HOUSE",
    "address_line3": "408 OAKWOOD LANE",
    "address_line4": "ROUNDHAY",
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "LS8 3LG",
    "town": "LEEDS",
    "uprn": "72825748",
  },
  {
    "address_line1": "BLOCK A UNIT A905",
    "address_line2": "21 WARROCH STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RI03",
    "country_code": "S",
    "postcode": "G3 8BL",
    "town": "GLASGOW",
    "uprn": "906700559524",
  },
]
`;

exports[`update updates to a specific version 1`] = `
[
  {
    "address_line1": "19 NIGHTINGALE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "E",
    "postcode": "HU10 7GY",
    "town": "KIRK ELLA",
    "uprn": "10095589421",
  },
  {
    "address_line1": "33 SIR FREDERICK CLARKE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "OX29 7EG",
    "town": "WITNEY",
    "uprn": "10096719965",
  },
  {
    "address_line1": "FLAT 3",
    "address_line2": "50 NEWBERY ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "DA8 2BY",
    "town": "ERITH",
    "uprn": "10096984676",
  },
  {
    "address_line1": "FLAT",
    "address_line2": "27-28 PEMBERTON STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "B18 6NY",
    "town": "BIRMINGHAM",
    "uprn": "10097262530",
  },
  {
    "address_line1": "6 HIGH STREET",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "S",
    "postcode": "EH22 1HR",
    "town": "DALKEITH",
    "uprn": "120021519",
  },
  {
    "address_line1": "UNIT C015",
    "address_line2": "TRIDENT BUSINESS CENTRE",
    "address_line3": "89 BICKERSTETH ROAD",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "SW17 9SH",
    "town": "LONDON",
    "uprn": "121036452",
  },
  {
    "address_line1": "45 BALFOUR AVENUE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "C",
    "country_code": "N",
    "postcode": "BT38 9RE",
    "town": "WHITEHEAD",
    "uprn": "185395909",
  },
  {
    "address_line1": "MOSSLEY PRIMARY SCHOOL",
    "address_line2": "2 HAZELBURN ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CE",
    "country_code": "N",
    "postcode": "BT36 5NA",
    "town": "NEWTOWNABBEY",
    "uprn": "187378732",
  },
  {
    "address_line1": "27A CARRICKBROAD ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "R",
    "country_code": "N",
    "postcode": "BT35 8TG",
    "town": "NEWRY",
    "uprn": "187531340",
  },
  {
    "address_line1": "APARTMENT 2",
    "address_line2": "38 OLD DISTILLERY GARDENS",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "N",
    "postcode": "BT49 0FR",
    "town": "LIMAVADY",
    "uprn": "187842038",
  },
  {
    "address_line1": "3 ELM ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "N",
    "postcode": "BT82 0JE",
    "town": "DUNNAMANAGH",
    "uprn": "187849005",
  },
  {
    "address_line1": "44 TOWNSEND STREET",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "N",
    "postcode": "BT13 2BU",
    "town": "BELFAST",
    "uprn": "187849100",
  },
  {
    "address_line1": "GROUND FLOOR FLAT",
    "address_line2": "238 WELLS ROAD",
    "address_line3": "KNOWLE",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "BS4 2PJ",
    "town": "BRISTOL",
    "uprn": "266119",
  },
  {
    "address_line1": "ORCHARD CHASE",
    "address_line2": "HEALE LANE",
    "address_line3": "CURRY RIVEL",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "E",
    "postcode": "TA10 0AF",
    "town": "LANGPORT",
    "uprn": "30095445",
  },
  {
    "address_line1": "FLAT 7",
    "address_line2": "180 HAMMERSMITH GROVE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7HF",
    "town": "LONDON",
    "uprn": "34097020",
  },
  {
    "address_line1": "MAISONETTE FLOORS 1 AND 2",
    "address_line2": "7 SAMUEL'S CLOSE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7BX",
    "town": "LONDON",
    "uprn": "34112185",
  },
  {
    "address_line1": "L AND M AUTOS GROUND FLOOR",
    "address_line2": "1 GROSVENOR ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "L34 6HY",
    "town": "PRESCOT",
    "uprn": "40075876",
  },
  {
    "address_line1": "ROOM 415",
    "address_line2": "GOLDSMITHS HOUSE",
    "address_line3": "PARK VILLAGE EAST",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "NW1 3SX",
    "town": "LONDON",
    "uprn": "5134274",
  },
  {
    "address_line1": "UNIT 409",
    "address_line2": "4 SCHWARTZ WHARF",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "E9 5AA",
    "town": "LONDON",
    "uprn": "6710883",
  },
  {
    "address_line1": "ROOM A803C",
    "address_line2": "WHITE ROSE VIEW",
    "address_line3": "16 MERRION WAY",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "LS2 8PD",
    "town": "LEEDS",
    "uprn": "72779096",
  },
  {
    "address_line1": "OFFICES G4 AND G5",
    "address_line2": "OAK TREE HOUSE",
    "address_line3": "408 OAKWOOD LANE",
    "address_line4": "ROUNDHAY",
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "LS8 3LG",
    "town": "LEEDS",
    "uprn": "72825748",
  },
  {
    "address_line1": "BLOCK A UNIT A903",
    "address_line2": "21 WARROCH STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RI03",
    "country_code": "S",
    "postcode": "G3 8BL",
    "town": "GLASGOW",
    "uprn": "906700559524",
  },
]
`;

exports[`update updates to the latest version 1`] = `
[
  {
    "address_line1": "19 NIGHTINGALE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "E",
    "postcode": "HU10 7GY",
    "town": "KIRK ELLA",
    "uprn": "10095589421",
  },
  {
    "address_line1": "33 SIR FREDERICK CLARKE DRIVE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "OX29 7EG",
    "town": "WITNEY",
    "uprn": "10096719965",
  },
  {
    "address_line1": "FLAT 3",
    "address_line2": "50 NEWBERY ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "DA8 2BY",
    "town": "ERITH",
    "uprn": "10096984676",
  },
  {
    "address_line1": "FLAT",
    "address_line2": "27-28 PEMBERTON STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "B18 6NY",
    "town": "BIRMINGHAM",
    "uprn": "10097262530",
  },
  {
    "address_line1": "64 LONG DITCH FURLONG",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD03",
    "country_code": "E",
    "postcode": "HP17 8ZP",
    "town": "HADDENHAM",
    "uprn": "10097278421",
  },
  {
    "address_line1": "6 HIGH STREET",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "S",
    "postcode": "EH22 1HR",
    "town": "DALKEITH",
    "uprn": "120021519",
  },
  {
    "address_line1": "UNIT C015",
    "address_line2": "TRIDENT BUSINESS CENTRE",
    "address_line3": "89 BICKERSTETH ROAD",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "SW17 9SH",
    "town": "LONDON",
    "uprn": "121036452",
  },
  {
    "address_line1": "45 BALFOUR AVENUE",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "C",
    "country_code": "N",
    "postcode": "BT38 9RE",
    "town": "WHITEHEAD",
    "uprn": "185395909",
  },
  {
    "address_line1": "MOSSLEY PRIMARY SCHOOL",
    "address_line2": "2 HAZELBURN ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CE",
    "country_code": "N",
    "postcode": "BT36 5NA",
    "town": "NEWTOWNABBEY",
    "uprn": "187378732",
  },
  {
    "address_line1": "27A CARRICKBROAD ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "R",
    "country_code": "N",
    "postcode": "BT35 8TG",
    "town": "NEWRY",
    "uprn": "187531340",
  },
  {
    "address_line1": "APARTMENT 2",
    "address_line2": "38 OLD DISTILLERY GARDENS",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "N",
    "postcode": "BT49 0FR",
    "town": "LIMAVADY",
    "uprn": "187842038",
  },
  {
    "address_line1": "3 ELM ROAD",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD02",
    "country_code": "N",
    "postcode": "BT82 0JE",
    "town": "DUNNAMANAGH",
    "uprn": "187849005",
  },
  {
    "address_line1": "45 MAPLE GLEN",
    "address_line2": null,
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "U",
    "country_code": "N",
    "postcode": "BT48 0NE",
    "town": "LONDONDERRY",
    "uprn": "187851753",
  },
  {
    "address_line1": "FLAT 27",
    "address_line2": "WANDLE HOUSE",
    "address_line3": "2 MUSWELL WAY",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "HA1 3NJ",
    "town": "HARROW",
    "uprn": "202247285",
  },
  {
    "address_line1": "FLAT 126 ROOM C",
    "address_line2": "NORTHFIELD",
    "address_line3": "NORTHFIELD LANE",
    "address_line4": "UNIVERSITY OF SUSSEX",
    "address_type": "Geographic",
    "classification_code": "RI03",
    "country_code": "E",
    "postcode": "BN1 9BJ",
    "town": "BRIGHTON",
    "uprn": "22252469",
  },
  {
    "address_line1": "GROUND FLOOR FLAT",
    "address_line2": "238 WELLS ROAD",
    "address_line3": "KNOWLE",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "BS4 2PJ",
    "town": "BRISTOL",
    "uprn": "266119",
  },
  {
    "address_line1": "ORCHARD CHASE",
    "address_line2": "HEALE LANE",
    "address_line3": "CURRY RIVEL",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "PP",
    "country_code": "E",
    "postcode": "TA10 0AF",
    "town": "LANGPORT",
    "uprn": "30095445",
  },
  {
    "address_line1": "FLAT 7",
    "address_line2": "180 HAMMERSMITH GROVE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7HF",
    "town": "LONDON",
    "uprn": "34097020",
  },
  {
    "address_line1": "MAISONETTE FLOORS 1 AND 2",
    "address_line2": "7 SAMUEL'S CLOSE",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RD06",
    "country_code": "E",
    "postcode": "W6 7BX",
    "town": "LONDON",
    "uprn": "34112185",
  },
  {
    "address_line1": "L AND M AUTOS GROUND FLOOR",
    "address_line2": "1 GROSVENOR ROAD",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "L34 6HY",
    "town": "PRESCOT",
    "uprn": "40075876",
  },
  {
    "address_line1": "ROOM 415",
    "address_line2": "GOLDSMITHS HOUSE",
    "address_line3": "PARK VILLAGE EAST",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "NW1 3SX",
    "town": "LONDON",
    "uprn": "5134274",
  },
  {
    "address_line1": "UNIT 409",
    "address_line2": "4 SCHWARTZ WHARF",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "CI03",
    "country_code": "E",
    "postcode": "E9 5AA",
    "town": "LONDON",
    "uprn": "6710883",
  },
  {
    "address_line1": "ROOM A803C",
    "address_line2": "WHITE ROSE VIEW",
    "address_line3": "16 MERRION WAY",
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RH02",
    "country_code": "E",
    "postcode": "LS2 8PD",
    "town": "LEEDS",
    "uprn": "72779096",
  },
  {
    "address_line1": "OFFICES G4 AND G5",
    "address_line2": "OAK TREE HOUSE",
    "address_line3": "408 OAKWOOD LANE",
    "address_line4": "ROUNDHAY",
    "address_type": "Geographic",
    "classification_code": "CO01",
    "country_code": "E",
    "postcode": "LS8 3LG",
    "town": "LEEDS",
    "uprn": "72825748",
  },
  {
    "address_line1": "BLOCK A UNIT A905",
    "address_line2": "21 WARROCH STREET",
    "address_line3": null,
    "address_line4": null,
    "address_type": "Geographic",
    "classification_code": "RI03",
    "country_code": "S",
    "postcode": "G3 8BL",
    "town": "GLASGOW",
    "uprn": "906700559524",
  },
]
`;
